# sendspin-cli

./: README.md  pyproject.toml
scripts/systemd/: install-systemd.sh
sendspin/: audio.py
sendspin/daemon/: daemon.py
sendspin/tui/: app.py
